@@ -195,6 +195,13 @@ void FGotoCodeGen::writeExec()
 			"		goto _out;\n";
 	}
 
+	if ( redFsm->errState != 0 ) {
+		outLabelUsed = true;
+		out << 
+			"	if ( " << CS() << " == " << redFsm->errState->id << " )\n"
+			"		goto _out;\n";
+	}
+
 	out << "_resume:\n";
 
 	if ( redFsm->anyFromStateActions() ) {
@@ -227,6 +234,13 @@ void FGotoCodeGen::writeExec()
 			SWITCH_DEFAULT() <<
 			"	}\n"
 			"\n";
+	}
+
+	if ( redFsm->errState != 0 ) {
+		outLabelUsed = true;
+		out << 
+			"	if ( " << CS() << " == " << redFsm->errState->id << " )\n"
+			"		goto _out;\n";
 	}
 
 	if ( hasEnd ) {
