@@ -661,8 +661,6 @@ void FlatCodeGen::writeExec()
 			"	if ( " << P() << " == " << PE() << " )\n"
 			"		goto _out;\n";
 	}
-	
-	out << "_resume:\n";
 
 	if ( redFsm->errState != 0 ) {
 		outLabelUsed = true;
@@ -670,6 +668,8 @@ void FlatCodeGen::writeExec()
 			"	if ( " << CS() << " == " << redFsm->errState->id << " )\n"
 			"		goto _out;\n";
 	}
+
+	out << "_resume:\n";
 
 	if ( redFsm->anyFromStateActions() ) {
 		out <<
@@ -727,6 +727,13 @@ void FlatCodeGen::writeExec()
 			"		}\n"
 			"	}\n"
 			"\n";
+	}
+
+	if ( redFsm->errState != 0 ) {
+		outLabelUsed = true;
+		out << 
+			"	if ( " << CS() << " == " << redFsm->errState->id << " )\n"
+			"		goto _out;\n";
 	}
 
 	if ( hasEnd ) {
